--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
     <h2>Iam a web developer</h2>
     <hr />
     <h3>
-      <a
-        href="../2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html"
-        >MOVIE RANKING PROJECT</a
-      >
+      <a href="./public/movie-ranking.html">MOVIE RANKING PROJECT</a>
     </h3>
     <h4>Preview:</h4>
-    <img src="/assets/images/movies.png" height="400" />
+    <img src="./assets/images/movies.png" height="400" />
     <h3>
-      <a href="../3.4 Birthday Invite Project/index.html"
-        >BIRTHDAY INVITE PROJECT</a
-      >
+      <a href="./public/birthday-invite.html">BIRTHDAY INVITE PROJECT</a>
     </h3>
     <h4>Preview:</h4>
     <img src="./assets/images/bi.png" height="400" />
     <a href></a>
     <hr />
-    <a href="./public/contact.html">About me</a>
+    <h6><a href="/public/about.html">About me</a></h6>
+    <h6><a href="./public/contact.html">Contact me</a></h6>
   </body>
 </html>
 
