--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img src="./assets/images/bi.png" height="400" />
     <a href></a>
     <hr />
-    <h6><a href="/public/about.html">About me</a></h6>
+    <h6><a href="./public/about.html">About me</a></h6>
     <h6><a href="./public/contact.html">Contact me</a></h6>
   </body>
 </html>
