--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,28 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>
+  I, Shyaam Sundar, am a diligent and ambitious student with a strong interest
+  in web design and app development, currently pursuing a BE in Computer Science
+  (2023-2027). With foundational knowledge in HTML, CSS, JavaScript, Python,
+  C++, and Java, I am passionate about crafting intuitive, responsive, and
+  visually appealing user experiences. My enthusiasm for technology motivates me
+  to stay updated on industry trends and continuously enhance my skills..
+</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p>
+  Throughout my academic journey, I have actively participated in various events
+  and competitions. I secured first place in the Project Presentation
+  competition at NSCET, showcasing my research skills, project management
+  expertise, and effective communication. Additionally, I earned first place in
+  a quiz competition at PSR College of Engineering and Technology and
+  demonstrated exceptional problem-solving abilities at a debugging event hosted
+  by Kalasalingam Academy of Research and Education.
+</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<p>
+  I am particularly drawn to web and app development for their potential to
+  create impactful and innovative solutions. I enjoy exploring the intricacies
+  of coding languages and have a passion for pushing creative boundaries while
+  staying committed to delivering high-quality results. With a CGPA of 8.27 and
+  a strong academic background (HSC-92%, SSC-89%), I am eager to contribute to
+  dynamic projects and grow further in the field.
+</p>
