--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h4>Preview:</h4>
     <img src="./assets/images/movies.png" height="400" />
     <h3>
-      <a href="./public/birthday-invite.html">BIRTHDAY INVITE PROJECT</a>
+      <a href="./birthday-invite.html">BIRTHDAY INVITE PROJECT</a>
     </h3>
     <h4>Preview:</h4>
     <img src="./assets/images/bi.png" height="400" />
