--- a/birthday-invite.html
+++ b/birthday-invite.html
@@ -1,8 +1,6 @@
 <h1>My birthday!</h1>
 <h2>On 25th of feb</h2>
-<img
-  src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-/>
+<img src="./assets/images/cake.jpg" height="400" />
 <h3>what to bring</h3>
 <ul>
   <li>baloons</li>
